[package]
name = "dectdump"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
bitvec = "1.0.1"
clap = { version = "4.5.23", features = ["derive"] }
futures = "0.3.31"
tokio = { version = "1.42.0", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "fs",
    "io-util",
    "signal",
] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.13", features = ["codec", "net"] }
